chore($login): 취미 통신 코드 추가